static/sass/pybossa/_card.scss
.thumbnail.card {
    border-radius: 2px;
    padding: 0px;
    border: 0px;

    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
    margin-bottom: 20px;
    img,

    div {
        border-radius: 2px 2px 0px 0px;
    }

    .caption {
        padding-left: 20px;
        padding-right: 20px;
        padding-bottom: 5px;

        p {
            display: block;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            font-size: 15px;
        }

        br{display: block;}

        span {
            text-decoration: underline;
        }

        .readmore {
            a {
                color: $blue-link;
                text-transform: uppercase;
                font-weight: 600;
                cursor: pointer;
            }
        }

        .progress {
            height: 15px;
            margin-bottom: 12px;
            border-radius: 2px;
            span {
                line-height: 13px;
                font-size: 13px;
            }
        }
    }

    .post-pic h3,
    .post-pic i {
        padding-top: 100px;
        padding-left: 20px;
        padding-right: 20px;
        color: $white;
    }

    .post-pic i {
        color: rgba(0,0,0,0.3);
    }
}

$font-size: 15px;
$line-height: 1.4;
$lines-to-show: 3;

.card {
    background-color: $white;
    .caption h3 {
        margin-top: 0.5em;
        color: $grey;
        font-weight: 600;
        display: block;
        display: -webkit-box;
        height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
        font-size: $font-size;
        line-height: $line-height;
        -webkit-line-clamp: $lines-to-show;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    h3.small-space {
        min-height: 23px;
    }
}

/* XS devices */
.post-pic {
    height: 195px;
}

.project-tiles {
    .col-md-4 {
        float: left;
        width: 50%;

        .post-pic {
            height: 130px;

            h3, i {
                padding-top: 0;
                margin-top: 30px;
                font-size: 22px;
            }

            .col-xs-8 {
                width: 55%;
            }

            .fa-4x {
                font-size: 40px;
            }
        }
    }

    .thumbnail {
        &.card {
            .caption {
                height: 120px;

                p {
                    white-space: unset;
                    overflow: unset;
                    text-overflow: unset;
                    height: 68px;
                    clear: both;
                }
            }
        }
    }
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .post-pic {
        height: 153px;
    }

    .project-tiles {
        .col-md-4 {
            .post-pic {
                .fa-4x {
                    font-size: 50px;
                }
            }
        }
    }

    .card-fix-p {
        margin-bottom: 32px;
    }
}


/* Medium devices (992px and up) */
@media (min-width: 992px) {
    .col-md-6 .post-pic {
        height: 202px;
    }

    .col-md-4 .post-pic {
        height: 202px;
    }

    .project-tiles {
        .col-md-4 {
            width: 33.333333%;
        }
    }

    .project-tiles {
        .col-md-4 {
            .post-pic {
                .fa-4x {
                    font-size: 40px;
                }
            }
        }
    }
}

/* Large devices (1200px and up) */
@media (min-width: 1200px) {
    .col-md-6 .post-pic {
        height: 250px;
    }

    .col-md-4 .post-pic {
        height: 160px;
    }

    .project-tiles {
        .col-md-4 {
            width: 25%;

            .post-pic {
                h3, i {
                    font-size: 21px;
                }

                .col-xs-8 {
                    width: 53%;
                }

                .fa-4x {
                    font-size: 36px;
                }
            }
        }
    }
}

